--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <h1>Breakout Game From Vanilla Web Projects</h1>
+    <p align="left">  
+	    <a href="https://xdvrx1.github.io/breakout-game/"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2Fxdvrx1%2Fbreakout-game&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=BREAKOUT+GAME+HITS&edge_flat=false"/></a>
+    </p>	      
     <button id="rules-btn" class="btn rules-btn">Show Rules</button>
     <div id="rules" class="rules">
       <h2>How To Play:</h2>
